# a

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  config.yaml  dataset_manager.py  docker-compose.yml  index.html  index.js  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  pyproject.toml  tailwind.config.js  tsconfig.json
.github/workflows/: blank.yml  ci.yml  test.yml
angoranet/: __init__.py
apps/agents/: package.json  tsconfig.json
apps/agents/generated-apps/sample-app/: README.md
apps/agents/src/: main.ts
apps/ingest/: package.json
apps/ingest/src/: index.ts
apps/web/: Dockerfile  package.json  svelte.config.js  tsconfig.json
apps/web/src/: app.d.ts
apps/web/src/routes/: +page.svelte
examples/p5-spiral/: README.md  index.html  sketch.js
my-app/: package.json  pnpm-lock.yaml
my-app/src/: App.tsx  Chat.test.tsx  Chat.tsx
src/: App.tsx  main.js  server.test.ts  server.ts
src/api/: foia.ts  joke.ts  weather.ts
src/bot/adapters/: fallback.ts  joke.ts  weather.ts
src/bot/core/: apps.ts  continuity.ts  engine.ts
src/bot/flows/: example.yaml
src/cli/: note.ts
src/green_ai/: actions.py  agent.py  service.py  simulate.py  telemetry.py
src/ui/components/: Chat.tsx
tests/: api.test.ts  engine.test.ts  joke.test.ts  test_handle_post.py  test_service.py  weather.test.ts
