[tool.poetry]
name = "green-ai-retrofit"
version = "0.1.0"
description = "RL Scheduler Proof of Concept"
authors = ["Example <example@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
pydantic = "^2.0"
prometheus_client = "^0.20"
aiohttp = "^3.9"
pandas = "^2.1"
numpy = "^1.26"
# Optional heavy deps
# ray[rllib] = {version = "^2.11", optional = true}
# kubernetes = "~26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
